examples/failing/direct-route/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sso-route
  namespace: default
spec:
  parentRefs:
    - name: main-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /sso
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: sso-upstream
          port: 443
